fixed issue with alignment

--- a/styles/trust.scss
+++ b/styles/trust.scss
@@ -12,6 +12,7 @@
 
         @media (width < 550px) {
             flex-direction: column;
+            align-items: flex-start;
         }
     }
 
